# prism-terminal

./: .gitignore  FEATURES.md  package-lock.json  package.json
docs/: PRISM-Feature-Roadmap.docx  PRISM-Marketing-Plan.docx  ~$ISM-Feature-Roadmap.docx
scripts/: release.sh  staple-0.2.6.sh  staple-latest.sh
site/: index.html  package.json  server.js
site/docs/: index.html
site/updates/: latest.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon-source.html  icon.icns
src-tauri/src/: main.rs
