[package]
name = "prism-spike"
version = "0.2.5"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
portable-pty = "0.9"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
notify = "6"
tauri-plugin-updater = "2.0.0-rc.4"
serde_json = "1.0.150"

[target."cfg(target_os = \"macos\")".dependencies]
window-vibrancy = "0.5"

[[bin]]
name = "prism-spike"
path = "src/main.rs"
